syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common.proto";

option java_package = "$package$.api";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
